--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ section .text-container .text-box {
     margin: 20px;
     padding: 20px;
     background: #00c2cb;
+    border-radius: 20px;
 }
 
 section .text-container .text-box h3 {
