--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Asap", sans-serif;
+    font-family: "Bauhaus 93", sans-serif;
     scroll-behavior: smooth;
 }
 
@@ -21,7 +21,7 @@ header {
     left: 0;
     width: 100%;
     z-index: 1000;
-    background: #000000;
+    background: #3f3f3f;
     padding: 20px;
     text-align: center;
     border-bottom: 1px solid #ffffff;
