--- a/style.css
+++ b/style.css
@@ -84,6 +84,14 @@ section:nth-child(5) {
     color: #000000;
 }
 
+section:nth-child(6) {
+    color: #000000;
+}
+
+section:nth-child(7) {
+    color: #000000;
+}
+
 section .container {
     margin: 100px;
 }
