--- a/style.css
+++ b/style.css
@@ -131,6 +131,12 @@ img {
     border-radius: 10px;
 }
 
+#background-video {
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
 @media (max-width: 900px) {
     section h1 {
         font-size: 2rem;
