--- a/style.css
+++ b/style.css
@@ -131,12 +131,6 @@ img {
     border-radius: 10px;
 }
 
-#background-video {
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-}
-
 @media (max-width: 900px) {
     section h1 {
         font-size: 2rem;
@@ -157,4 +151,35 @@ img {
 .reveal.active {
     transform: translateY(0);
     opacity: 1;
+}
+
+#bound-one {
+    background: #d0d8db;
+}
+
+#bound-two {
+    background: #dfcece;
+}
+
+#bound-three {
+    background: #D0D6B3;
+}
+
+.scroll-bound {
+    height: 500vh;
+}
+
+.scroll-bound .content {
+    height: 100vh;
+    width: 100%;
+    position: sticky;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.scroll-bound video {
+    width: 80%;
 }
