next patch woho

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ section:nth-child(5) {
 
 section:nth-child(6) {
     color: #000000;
-    background: #ffffff
+    background: #ffffff;
 }
 
 section:nth-child(7) {
