--- a/style.css
+++ b/style.css
@@ -93,6 +93,11 @@ section:nth-child(7) {
     color: #000000;
 }
 
+section:nth-child(8) {
+    color: #000000;
+    background: #ffffff
+}
+
 section .container {
     margin: 100px;
 }
